Fix modal close and overlay z-index

--- a/eztoverify.css
+++ b/eztoverify.css
@@ -14,10 +14,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 9999999;
 }
 
 #ez-popup-message {
@@ -36,10 +36,10 @@
 }
 
 /* The Modal (background) */
-.ez-modal {
-  /* height: 100%;
-  width: 100%; */
-}
+/* .ez-modal {
+  height: 100%;
+  width: 100%;
+} */
 
 /* Modal Content */
 .ez-modal-content {
@@ -91,7 +91,6 @@
   z-index: 100;
 }
 
-
 .loaderContainer {
   position: fixed;
   top: 0;
@@ -103,9 +102,9 @@
   align-items: center;
 }
 
-.loader {
-  border: 4px solid #f3f3f3; 
-  border-top: 4px solid #1C63EB; 
+.ez-loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #1c63eb;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -113,17 +112,20 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-
 @media only screen and (max-width: 600px) {
-  #ezto{
+  #ezto {
     height: 100vh;
     width: 100vw;
   }
-  .ez-modal-content{
+  .ez-modal-content {
     width: 100vw;
     height: 100vh;
     border-radius: 0;
